dataset1235/2025-2/1153765216/users/3623738290/executions/2747719322_1927446959.log
== SUBMISSION (2025-08-21 19:42:35)
-- CODE: 
numero_n = float(input("digite o valor"))


porcentagem_27 = numero_n * (numero_n * 27/100)
acrescimo_42 = numero_n + (numero_n * (42/100))
desconto_63 = numero_n - (numero_n * (63/1000))

print(round(porcentagem_27, 2))
print(round(acrescimo_42, 2))
print(round(desconto_63, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
---- user output:
115.38
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
---- user output:
23.43
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
---- user output:
305.09
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
---- user output:
3343.12
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
---- user output:
5084.35
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
---- user output:
11.38
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 19:40:45)
-- CODE: 
numero_n = float(input("digite o valor"))


porcentagem_27 = numero_n * (27/100)
acrescimo_42 = numero_n + (numero_n * (42/100))
desconto_63 = numero_n - (numero_n * 63/1000))

print(round(porcentagem_27, 2))
print(round(acrescimo_42, 2))
print(round(desconto_63, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
File "XXXX", line 6
    desconto_63 = numero_n - (numero_n * 63/1000))
                                                 ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
File "XXXX", line 6
    desconto_63 = numero_n - (numero_n * 63/1000))
                                                 ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
File "XXXX", line 6
    desconto_63 = numero_n - (numero_n * 63/1000))
                                                 ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
File "XXXX", line 6
    desconto_63 = numero_n - (numero_n * 63/1000))
                                                 ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
File "XXXX", line 6
    desconto_63 = numero_n - (numero_n * 63/1000))
                                                 ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
File "XXXX", line 6
    desconto_63 = numero_n - (numero_n * 63/1000))
                                                 ^
SyntaxError: unmatched ')'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 19:40:47)
-- CODE: 
numero_n = float(input("digite o valor"))


porcentagem_27 = numero_n * (27/100)
acrescimo_42 = numero_n + (numero_n * (42/100))
desconto_63 = numero_n - (numero_n * 63/1000))

print(round(porcentagem_27, 2))
print(round(acrescimo_42, 2))
print(round(desconto_63, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
File "XXXX", line 6
    desconto_63 = numero_n - (numero_n * 63/1000))
                                                 ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
File "XXXX", line 6
    desconto_63 = numero_n - (numero_n * 63/1000))
                                                 ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
File "XXXX", line 6
    desconto_63 = numero_n - (numero_n * 63/1000))
                                                 ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
File "XXXX", line 6
    desconto_63 = numero_n - (numero_n * 63/1000))
                                                 ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
File "XXXX", line 6
    desconto_63 = numero_n - (numero_n * 63/1000))
                                                 ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
File "XXXX", line 6
    desconto_63 = numero_n - (numero_n * 63/1000))
                                                 ^
SyntaxError: unmatched ')'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 19:41:59)
-- CODE: 
numero_n = float(input("digite o valor"))


porcentagem_27 = numero_n * (27/100)
acrescimo_42 = numero_n + (numero_n * (42/100))
desconto_63 = numero_n - (numero_n * (63/1000))

print(round(porcentagem_27, 2))
print(round(acrescimo_42, 2))
print(round(desconto_63, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
---- user output:
115.38
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
---- user output:
23.43
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
---- user output:
305.09
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
---- user output:
3343.12
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
---- user output:
5084.35
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
---- user output:
11.38
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 19:43:43)
-- CODE: 
numero_n = float(input("digite o valor"))


porcentagem_27 = numero_n * (27/100)
acrescimo_42 = numero_n + (numero_n * (42/100))
desconto_63 = numero_n - (numero_n * (63/100))

print(round(porcentagem_27, 2))
print(round(acrescimo_42, 2))
print(round(desconto_63, 2))
-- EXECUTION TIME: 
0.0133333
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
---- user output:
45.56
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
---- user output:
9.25
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
---- user output:
120.47
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
---- user output:
1320.12
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
---- user output:
2007.69
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
---- user output:
4.5
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
